--- a/NotesTaking/Dashboard.xaml
+++ b/NotesTaking/Dashboard.xaml
@@ -47,7 +47,7 @@
                             FontSize="10" 
                             FontWeight="Bold"
                             BorderThickness="2.5"
-                            BorderBrush="#008E70">
+                            BorderBrush="#008E70" Click="btnNotes_Click">
                         <Button.Resources>
                             <Style TargetType="{x:Type Border}">
                                 <Setter Property="CornerRadius" Value="15"/>
@@ -69,7 +69,7 @@
                         FontSize="10" 
                         FontWeight="Bold"
                         BorderThickness="2.5"
-                        BorderBrush="#008E70">
+                        BorderBrush="#008E70" Click="btnArchive_Click">
                         <Button.Resources>
                             <Style TargetType="{x:Type Border}">
                                 <Setter Property="CornerRadius" Value="15"/>
@@ -90,7 +90,7 @@
                         FontSize="10" 
                         FontWeight="Bold"
                         BorderThickness="2.5"
-                        BorderBrush="#008E70">
+                        BorderBrush="#008E70" Click="btnReminders_Click">
                         <Button.Resources>
                             <Style TargetType="{x:Type Border}">
                                 <Setter Property="CornerRadius" Value="15"/>
@@ -100,7 +100,7 @@
                             <Label Foreground="#008E70" Content="Reminders" FontFamily="Segoe" FontSize="15" DockPanel.Dock="Right" Width="84"/>
                         </DockPanel>
                     </Button>
-                    <Button x:Name="btnReminders_Copy"  
+                    <Button x:Name="btnTrash"  
                         HorizontalAlignment="Center" 
                         Grid.Row="7" 
                         VerticalAlignment="Center" 
@@ -109,7 +109,7 @@
                         FontSize="10" 
                         FontWeight="Bold"
                         BorderThickness="2.5"
-                        BorderBrush="#008E70">
+                        BorderBrush="#008E70" Click="btnTrash_Click">
                         <Button.Resources>
                             <Style TargetType="{x:Type Border}">
                                 <Setter Property="CornerRadius" Value="15"/>
@@ -124,9 +124,9 @@
             </Border>
             <Ellipse x:Name="btnClose" Grid.Column="1" Margin="0,10,10,640" Fill="#FF343A" StrokeThickness="4" Stroke="#C7282D" HorizontalAlignment="Right" Width="30" MouseLeftButtonDown="btnClose_MouseLeftButtonDown" MouseEnter="btnClose_MouseEnter" MouseLeave="btnClose_MouseLeave"/>
             <Ellipse x:Name="btnMinimize" Grid.Column="1" Margin="0,10,45,0" Fill="#FFBE45" StrokeThickness="4" Stroke="#C79436" Height="30" VerticalAlignment="Top" HorizontalAlignment="Right" Width="30" MouseLeftButtonDown="btnMinimize_MouseLeftButtonDown" MouseEnter="btnMinimize_MouseEnter" MouseLeave="btnMinimize_MouseLeave"/>
-
+            <ContentControl x:Name="contentArea" Grid.Column="1" Margin="20,60,20,20"/>
         </Grid>
 
     </Border>
-
+ 
 </Window>
