--- a/NotesTaking/MVVM/View/NotesControl.xaml
+++ b/NotesTaking/MVVM/View/NotesControl.xaml
@@ -7,5 +7,6 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <TextBox TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto"/>
+        <Button Content="Create Button" HorizontalAlignment="Left" Height="22" Margin="94,26,0,0" VerticalAlignment="Top" Width="109" Click="Button_Click"/>
     </Grid>
 </UserControl>
