--- a/NotesTaking/Dashboard.xaml
+++ b/NotesTaking/Dashboard.xaml
@@ -79,7 +79,7 @@
                             <Label Foreground="#008E70" Content="Archive" FontFamily="Segoe" FontSize="15" DockPanel.Dock="Right" Width="66"/>
                         </DockPanel>
                     </Button>
-                    
+
                     <!--Reminder Button-->
                     <Button x:Name="btnReminders"  
                         HorizontalAlignment="Center" 
@@ -124,9 +124,13 @@
             </Border>
             <Ellipse x:Name="btnClose" Grid.Column="1" Margin="0,10,10,640" Fill="#FF343A" StrokeThickness="4" Stroke="#C7282D" HorizontalAlignment="Right" Width="30" MouseLeftButtonDown="btnClose_MouseLeftButtonDown" MouseEnter="btnClose_MouseEnter" MouseLeave="btnClose_MouseLeave"/>
             <Ellipse x:Name="btnMinimize" Grid.Column="1" Margin="0,10,45,0" Fill="#FFBE45" StrokeThickness="4" Stroke="#C79436" Height="30" VerticalAlignment="Top" HorizontalAlignment="Right" Width="30" MouseLeftButtonDown="btnMinimize_MouseLeftButtonDown" MouseEnter="btnMinimize_MouseEnter" MouseLeave="btnMinimize_MouseLeave"/>
-            <ContentControl x:Name="contentArea" Grid.Column="1" Margin="20,60,20,20"/>
+            <!--Main Content menu-->
+            <!-- ControlArea -->
+            <ContentControl x:Name="contentArea" Grid.Column="1" Margin="20,60,20,20">
+ 
+            </ContentControl>
         </Grid>
 
     </Border>
- 
+
 </Window>
