--- a/NotesTaking/MVVM/View/NotesControl.xaml
+++ b/NotesTaking/MVVM/View/NotesControl.xaml
@@ -1,12 +1,12 @@
 ﻿<UserControl x:Class="NotesTaking.MVVM.View.NotesControl"
-           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <TextBox TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto"/>
-        <Button Content="Create Button" HorizontalAlignment="Left" Height="22" Margin="94,26,0,0" VerticalAlignment="Top" Width="109" Click="Button_Click"/>
+        <Button Content="Create Button" HorizontalAlignment="Center" Height="22" Margin="0,41,0,0" VerticalAlignment="Top" Width="108" Click="Button_Click"/>
     </Grid>
-</UserControl>
+</UserControl> 
