--- a/NotesTaking/MVVM/View/NotesControl.xaml
+++ b/NotesTaking/MVVM/View/NotesControl.xaml
@@ -5,8 +5,28 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <TextBox TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto"/>
-        <Button Content="Create Button" HorizontalAlignment="Center" Height="22" Margin="0,41,0,0" VerticalAlignment="Top" Width="108" Click="Button_Click"/>
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <!-- Create Note Button -->
+        <Button Content="Create Note" HorizontalAlignment="Center" Height="30" Width="120" Click="CreateNoteButton_Click" Margin="0,10"/>
+
+        <!-- Notes Display Area -->
+        <ItemsControl x:Name="NotesItemsControl" Grid.Row="1" Margin="0,10,0,0">
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Border BorderBrush="Gray" BorderThickness="1" Margin="0,5" Padding="5" MouseLeftButtonUp="NoteItem_MouseLeftButtonUp">
+                        <StackPanel>
+                            <TextBlock Text="{Binding NoteTitle}" FontWeight="Bold" Margin="0,0,0,3"/>
+                            <TextBlock Text="{Binding NoteContent}" TextWrapping="Wrap"/>
+                        </StackPanel>
+                    </Border>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+
     </Grid>
-</UserControl> 
+</UserControl>
