--- a/NotesTaking/MVVM/View/NotesControl.xaml
+++ b/NotesTaking/MVVM/View/NotesControl.xaml
@@ -4,6 +4,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
+             xmlns:view="clr-namespace:NotesTaking.MVVM.View"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="10">
         <Grid.RowDefinitions>
@@ -18,12 +19,7 @@
         <ItemsControl x:Name="NotesItemsControl" Grid.Row="1" Margin="0,10,0,0">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Border BorderBrush="Gray" BorderThickness="1" Margin="0,5" Padding="5">
-                        <StackPanel>
-                            <TextBlock Text="{Binding NoteTitle}" FontWeight="Bold" Margin="0,0,0,3"/>
-                            <TextBlock Text="{Binding NoteContent}" TextWrapping="Wrap"/>
-                        </StackPanel>
-                    </Border>
+                    <view:notecontainer />
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
