--- a/NotesTaking/Dashboard.xaml
+++ b/NotesTaking/Dashboard.xaml
@@ -19,7 +19,7 @@
     <Border CornerRadius="24" Background="#28282b">
         <Grid >
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="170"/>
+                <ColumnDefinition Width="212"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
@@ -39,7 +39,7 @@
                     </Grid.RowDefinitions>
                     <!--Notes Button-->
                     <Button x:Name="btnNotes"  
-                            HorizontalAlignment="Center" 
+                            HorizontalAlignment="Left" 
                             Grid.Row="1" 
                             VerticalAlignment="Center" 
                             Height="50" Width="120"
@@ -47,7 +47,7 @@
                             FontSize="10" 
                             FontWeight="Bold"
                             BorderThickness="2.5"
-                            BorderBrush="#008E70" Click="btnNotes_Click">
+                            BorderBrush="#008E70" Click="btnNotes_Click" Margin="52,0,0,0">
                         <Button.Resources>
                             <Style TargetType="{x:Type Border}">
                                 <Setter Property="CornerRadius" Value="15"/>
@@ -61,7 +61,7 @@
                     <Image Margin="7,14,7,10" Source="Images\notabene.png" Stretch="Fill"/>
                     <!--Archive Button-->
                     <Button x:Name="btnArchive"  
-                        HorizontalAlignment="Center" 
+                        HorizontalAlignment="Left" 
                         Grid.Row="3" 
                         VerticalAlignment="Center" 
                         Height="50" Width="120"
@@ -69,7 +69,7 @@
                         FontSize="10" 
                         FontWeight="Bold"
                         BorderThickness="2.5"
-                        BorderBrush="#008E70" Click="btnArchive_Click">
+                        BorderBrush="#008E70" Click="btnArchive_Click" Margin="52,0,0,0">
                         <Button.Resources>
                             <Style TargetType="{x:Type Border}">
                                 <Setter Property="CornerRadius" Value="15"/>
@@ -82,7 +82,7 @@
 
                     <!--Reminder Button-->
                     <Button x:Name="btnReminders"  
-                        HorizontalAlignment="Center" 
+                        HorizontalAlignment="Left" 
                         Grid.Row="5" 
                         VerticalAlignment="Center" 
                         Height="50" Width="120"
@@ -90,7 +90,7 @@
                         FontSize="10" 
                         FontWeight="Bold"
                         BorderThickness="2.5"
-                        BorderBrush="#008E70" Click="btnReminders_Click">
+                        BorderBrush="#008E70" Click="btnReminders_Click" Margin="52,0,0,0">
                         <Button.Resources>
                             <Style TargetType="{x:Type Border}">
                                 <Setter Property="CornerRadius" Value="15"/>
@@ -101,7 +101,7 @@
                         </DockPanel>
                     </Button>
                     <Button x:Name="btnTrash"  
-                        HorizontalAlignment="Center" 
+                        HorizontalAlignment="Left" 
                         Grid.Row="7" 
                         VerticalAlignment="Center" 
                         Height="50" Width="120"
@@ -109,7 +109,7 @@
                         FontSize="10" 
                         FontWeight="Bold"
                         BorderThickness="2.5"
-                        BorderBrush="#008E70" Click="btnTrash_Click">
+                        BorderBrush="#008E70" Click="btnTrash_Click" Margin="52,0,0,0">
                         <Button.Resources>
                             <Style TargetType="{x:Type Border}">
                                 <Setter Property="CornerRadius" Value="15"/>
@@ -127,7 +127,7 @@
             <!--Main Content menu-->
             <!-- ControlArea -->
             <ContentControl x:Name="contentArea" Grid.Column="1" Margin="20,60,20,20">
- 
+
             </ContentControl>
         </Grid>
 
