--- a/NotesTaking/MainWindow.xaml
+++ b/NotesTaking/MainWindow.xaml
@@ -112,16 +112,7 @@
                    FontFamily="Segoe"
                    Foreground="WhiteSmoke"
                    Opacity=".4 "
-/>
-            <Label x:Name="CreateAcc" 
-                   Grid.Column="1" 
-                   Content="Don't have an account?" 
-                   Margin="303,556,10,0" Grid.Row="1" 
-                   VerticalAlignment="Top"
-                   FontFamily="Segoe"
-                   Foreground="WhiteSmoke"
-                   Opacity=".4"
-                   FontWeight="SemiBold" Cursor="Hand" MouseLeftButtonDown="CreateAcc_MouseLeftButtonDown"/>
+                   MouseLeftButtonDown="btnCreateAcc" Cursor="Hand"/>
         </Grid>
     </Border>
 
