--- a/NotesTaking/MVVM/View/NotePopupWindow.xaml
+++ b/NotesTaking/MVVM/View/NotePopupWindow.xaml
@@ -1,8 +1,12 @@
 ﻿<Window x:Class="NotesTaking.MVVM.View.NotePopupWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="clr-namespace:NotesTaking.MVVM.Converters"
         Title="Edit Note" Height="680" Width="1000" WindowStartupLocation="CenterScreen"
         Background="Transparent" AllowsTransparency="True" WindowStyle="None">
+    <Window.Resources>
+        <local:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+    </Window.Resources>
     <Border Background="#80000000" CornerRadius="24">
         <!-- Semi-transparent black background -->
         <Border Background="White" CornerRadius="24" Padding="10,28,10,10" HorizontalAlignment="Center" VerticalAlignment="Center" Width="500" Height="327">
@@ -27,6 +31,8 @@
                     <Button x:Name="DeleteButton" Content="Delete" Margin="5" Click="DeleteButton_Click"/>
                     <Button x:Name="ArchiveButton" Content="Archive" Margin="5" Click="ArchiveButton_Click"/>
                     <Button x:Name="CancelButton" Content="Cancel" Margin="5" Click="CancelButton_Click"/>
+                    <Button Content="Unarchive" Visibility="{Binding IsArchived, Converter={StaticResource BoolToVisibilityConverter}}" Click="UnarchiveButton_Click"/>
+
                 </StackPanel>
 
                 <!-- Close Button Image -->
