little tweak on the log out window

--- a/NotesTaking/LogoutConfirmationWindow.xaml
+++ b/NotesTaking/LogoutConfirmationWindow.xaml
@@ -5,29 +5,27 @@
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
         WindowStyle="None"
-        Background="#28282b"
+        Background="Transparent"
         AllowsTransparency="True">
     <Border Background="#28282b"
             BorderBrush="#008E70"
             BorderThickness="2"
             CornerRadius="20">
-        <Border.Effect>
-            <DropShadowEffect Color="Black" BlurRadius="10" ShadowDepth="5" Opacity="0.5"/>
-        </Border.Effect>
-        <Border CornerRadius="20">
+        <Border CornerRadius="20" Background="#28282b">
             <Grid>
-                <Border CornerRadius="20" Background="#28282b">
-                    <!-- Apply CornerRadius to the inner Border -->
-                    <TextBlock Text="Are you sure you want to log out?" 
-                               Foreground="White" 
-                               FontSize="16"
-                               HorizontalAlignment="Center"
-                               VerticalAlignment="Center"/>
-                </Border>
+                <!-- Apply CornerRadius to the inner Border -->
+                <TextBlock Text="Are you sure you want to log out?" 
+                           Foreground="White" 
+                           FontSize="16"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           Margin="20,20,20,60"/>
+                <!-- Added margin for buttons -->
+
                 <StackPanel Orientation="Horizontal" 
                             HorizontalAlignment="Center" 
                             VerticalAlignment="Bottom" 
-                            Margin="0,20,0,10">
+                            Margin="0,0,0,20">
                     <Button Content="Yes" 
                             Background="#008E70" 
                             Foreground="White" 
@@ -51,7 +49,7 @@
                             Margin="10"
                             Click="No_Click">
                         <Button.Effect>
-                            <DropShadowEffect Color="Black" BlurRadius="24" ShadowDepth="5" Opacity="60"/>
+                            <DropShadowEffect Color="Black" BlurRadius="10" ShadowDepth="5" Opacity="0.5"/>
                         </Button.Effect>
                     </Button>
                 </StackPanel>
