--- a/NotesTaking/MVVM/View/NotePopupWindow.xaml
+++ b/NotesTaking/MVVM/View/NotePopupWindow.xaml
@@ -47,7 +47,7 @@
                     <Button x:Name="CancelButton" Margin="5" Click="CancelButton_Click" Width="80">
                         <StackPanel Orientation="Horizontal">
                             <Image Height="26" Source="C:\Users\chris\source\repos\NotesTaking\NotesTaking\Images\icons8-cancel-24.png" Stretch="Fill" Width="28"/>
-                            <Label Content="Cancel" VerticalAlignment="Center" Margin="5,0,0,0" RenderTransformOrigin="0,0.381"/>
+                            <Label Content="Cancel" RenderTransformOrigin="0,0.381"/>
                         </StackPanel>
                     </Button>
                     <Button x:Name="UnarchiveButton" Margin="5" Click="UnarchiveButton_Click" Width="92" Visibility="{Binding IsArchived, Converter={StaticResource BoolToVisibilityConverter}}">
